# graphics-programming-2024

./: .gitignore  CMakeLists.txt
exercises/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
exercises/exercise00/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  exercise00.vcxproj  exercise00.vcxproj.filters
exercises/exercise00/exercise00.dir/Debug/: exercise00.exe.recipe  exercise00.ilk
exercises/exercise00/exercise00.dir/Debug/exercise00.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
exercises/exercise01/: INSTALL.vcxproj  INSTALL.vcxproj.filters  TerrainApplication.cpp  TerrainApplication.h  cmake_install.cmake  exercise01.vcxproj  exercise01.vcxproj.filters
exercises/exercise01/exercise01.dir/Debug/: exercise01.exe.recipe  exercise01.ilk
exercises/exercise01/exercise01.dir/Debug/exercise01.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  exercise01.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
libraries/: CMakeLists.txt
